perf(ServerService): optimize JVM args for better memory management
Remove unused diagnostic flags and switch to SerialGC for better stability.
Adjust heap settings to reduce memory fragmentation and improve performance.